syntax = "proto3";

package aiva.enums;

option go_package = "github.com/kyle0527/aiva/services/aiva_common/protocols/enums";

// =============================================
// 通用枚舉定義
// =============================================

// 嚴重程度等級
enum Severity {
  SEVERITY_UNSPECIFIED = 0;
  SEVERITY_CRITICAL = 1;
  SEVERITY_HIGH = 2;
  SEVERITY_MEDIUM = 3;
  SEVERITY_LOW = 4;
  SEVERITY_INFORMATIONAL = 5;
}

// 信心度等級
enum Confidence {
  CONFIDENCE_UNSPECIFIED = 0;
  CONFIDENCE_CERTAIN = 1;
  CONFIDENCE_FIRM = 2;
  CONFIDENCE_TENTATIVE = 3;
  CONFIDENCE_POSSIBLE = 4;
}

// 任務狀態
enum TaskStatus {
  TASK_STATUS_UNSPECIFIED = 0;
  TASK_STATUS_PENDING = 1;
  TASK_STATUS_QUEUED = 2;
  TASK_STATUS_RUNNING = 3;
  TASK_STATUS_COMPLETED = 4;
  TASK_STATUS_FAILED = 5;
  TASK_STATUS_CANCELLED = 6;
  TASK_STATUS_TIMEOUT = 7;
}

// 環境類型
enum Environment {
  ENVIRONMENT_UNSPECIFIED = 0;
  ENVIRONMENT_DEVELOPMENT = 1;
  ENVIRONMENT_TESTING = 2;
  ENVIRONMENT_STAGING = 3;
  ENVIRONMENT_PRODUCTION = 4;
}

// =============================================
// 安全相關枚舉
// =============================================

// 漏洞類型
enum VulnerabilityType {
  VULNERABILITY_TYPE_UNSPECIFIED = 0;
  VULNERABILITY_TYPE_SQL_INJECTION = 1;
  VULNERABILITY_TYPE_XSS = 2;
  VULNERABILITY_TYPE_CSRF = 3;
  VULNERABILITY_TYPE_AUTHENTICATION_BYPASS = 4;
  VULNERABILITY_TYPE_AUTHORIZATION_BYPASS = 5;
  VULNERABILITY_TYPE_INFORMATION_DISCLOSURE = 6;
  VULNERABILITY_TYPE_REMOTE_CODE_EXECUTION = 7;
  VULNERABILITY_TYPE_LOCAL_FILE_INCLUSION = 8;
  VULNERABILITY_TYPE_REMOTE_FILE_INCLUSION = 9;
  VULNERABILITY_TYPE_DIRECTORY_TRAVERSAL = 10;
  VULNERABILITY_TYPE_INSECURE_DIRECT_OBJECT_REFERENCE = 11;
  VULNERABILITY_TYPE_SECURITY_MISCONFIGURATION = 12;
  VULNERABILITY_TYPE_SENSITIVE_DATA_EXPOSURE = 13;
  VULNERABILITY_TYPE_INSUFFICIENT_LOGGING = 14;
  VULNERABILITY_TYPE_BROKEN_ACCESS_CONTROL = 15;
}

// 漏洞狀態
enum VulnerabilityStatus {
  VULNERABILITY_STATUS_UNSPECIFIED = 0;
  VULNERABILITY_STATUS_NEW = 1;
  VULNERABILITY_STATUS_OPEN = 2;
  VULNERABILITY_STATUS_IN_PROGRESS = 3;
  VULNERABILITY_STATUS_RESOLVED = 4;
  VULNERABILITY_STATUS_CLOSED = 5;
  VULNERABILITY_STATUS_REOPENED = 6;
  VULNERABILITY_STATUS_WONT_FIX = 7;
  VULNERABILITY_STATUS_FALSE_POSITIVE = 8;
}

// 攻擊向量 (CVSS)
enum AttackVector {
  ATTACK_VECTOR_UNSPECIFIED = 0;
  ATTACK_VECTOR_NETWORK = 1;
  ATTACK_VECTOR_ADJACENT = 2;
  ATTACK_VECTOR_LOCAL = 3;
  ATTACK_VECTOR_PHYSICAL = 4;
}

// 攻擊複雜度 (CVSS)
enum AttackComplexity {
  ATTACK_COMPLEXITY_UNSPECIFIED = 0;
  ATTACK_COMPLEXITY_LOW = 1;
  ATTACK_COMPLEXITY_HIGH = 2;
}

// 所需權限 (CVSS)
enum PrivilegesRequired {
  PRIVILEGES_REQUIRED_UNSPECIFIED = 0;
  PRIVILEGES_REQUIRED_NONE = 1;
  PRIVILEGES_REQUIRED_LOW = 2;
  PRIVILEGES_REQUIRED_HIGH = 3;
}

// 用戶交互 (CVSS)
enum UserInteraction {
  USER_INTERACTION_UNSPECIFIED = 0;
  USER_INTERACTION_NONE = 1;
  USER_INTERACTION_REQUIRED = 2;
}

// 影響範圍 (CVSS)
enum Scope {
  SCOPE_UNSPECIFIED = 0;
  SCOPE_UNCHANGED = 1;
  SCOPE_CHANGED = 2;
}

// CIA 影響 (CVSS)
enum Impact {
  IMPACT_UNSPECIFIED = 0;
  IMPACT_NONE = 1;
  IMPACT_LOW = 2;
  IMPACT_HIGH = 3;
}

// =============================================
// 資產相關枚舉
// =============================================

// 資產類型
enum AssetType {
  ASSET_TYPE_UNSPECIFIED = 0;
  ASSET_TYPE_URL = 1;
  ASSET_TYPE_HOST = 2;
  ASSET_TYPE_DOMAIN = 3;
  ASSET_TYPE_IP_ADDRESS = 4;
  ASSET_TYPE_REPOSITORY = 5;
  ASSET_TYPE_APPLICATION = 6;
  ASSET_TYPE_DATABASE = 7;
  ASSET_TYPE_API_ENDPOINT = 8;
  ASSET_TYPE_WEB_SERVICE = 9;
  ASSET_TYPE_MOBILE_APP = 10;
}

// 資產狀態
enum AssetStatus {
  ASSET_STATUS_UNSPECIFIED = 0;
  ASSET_STATUS_ACTIVE = 1;
  ASSET_STATUS_INACTIVE = 2;
  ASSET_STATUS_PENDING = 3;
  ASSET_STATUS_ARCHIVED = 4;
  ASSET_STATUS_DELETED = 5;
}

// 業務重要性
enum BusinessCriticality {
  BUSINESS_CRITICALITY_UNSPECIFIED = 0;
  BUSINESS_CRITICALITY_CRITICAL = 1;
  BUSINESS_CRITICALITY_HIGH = 2;
  BUSINESS_CRITICALITY_MEDIUM = 3;
  BUSINESS_CRITICALITY_LOW = 4;
}

// 資產暴露程度
enum AssetExposure {
  ASSET_EXPOSURE_UNSPECIFIED = 0;
  ASSET_EXPOSURE_INTERNAL = 1;
  ASSET_EXPOSURE_DMZ = 2;
  ASSET_EXPOSURE_EXTERNAL = 3;
  ASSET_EXPOSURE_CLOUD = 4;
}

// =============================================
// 模組相關枚舉
// =============================================

// 模組名稱
enum ModuleName {
  MODULE_NAME_UNSPECIFIED = 0;
  MODULE_NAME_CORE = 1;
  MODULE_NAME_SCAN = 2;
  MODULE_NAME_FEATURES = 3;
  MODULE_NAME_INTEGRATION = 4;
  MODULE_NAME_WEB = 5;
  MODULE_NAME_AI = 6;
  MODULE_NAME_PLANNER = 7;
  MODULE_NAME_COMMANDER = 8;
}

// 消息主題
enum Topic {
  TOPIC_UNSPECIFIED = 0;
  TOPIC_SCAN_START = 1;
  TOPIC_SCAN_PROGRESS = 2;
  TOPIC_SCAN_COMPLETED = 3;
  TOPIC_FINDINGS = 4;
  TOPIC_TASK_UPDATE = 5;
  TOPIC_SYSTEM_STATUS = 6;
  TOPIC_ERROR = 7;
  TOPIC_HEALTH_CHECK = 8;
  TOPIC_CONFIG_UPDATE = 9;
  TOPIC_USER_ACTION = 10;
}

// =============================================
// AI 相關枚舉
// =============================================

// AI 任務類型
enum AITaskType {
  AI_TASK_TYPE_UNSPECIFIED = 0;
  AI_TASK_TYPE_ATTACK_PLANNING = 1;
  AI_TASK_TYPE_STRATEGY_DECISION = 2;
  AI_TASK_TYPE_EXPERIENCE_LEARNING = 3;
  AI_TASK_TYPE_VULNERABILITY_ANALYSIS = 4;
  AI_TASK_TYPE_THREAT_MODELING = 5;
  AI_TASK_TYPE_REMEDIATION_PLANNING = 6;
}

// AI 組件類型
enum AIComponentType {
  AI_COMPONENT_TYPE_UNSPECIFIED = 0;
  AI_COMPONENT_TYPE_BIO_NEURON_AGENT = 1;
  AI_COMPONENT_TYPE_RAG_ENGINE = 2;
  AI_COMPONENT_TYPE_MULTILANG_COORDINATOR = 3;
  AI_COMPONENT_TYPE_DIALOG_ASSISTANT = 4;
  AI_COMPONENT_TYPE_PLAN_EXECUTOR = 5;
}

// =============================================
// 掃描相關枚舉
// =============================================

// 掃描類型
enum ScanType {
  SCAN_TYPE_UNSPECIFIED = 0;
  SCAN_TYPE_VULNERABILITY = 1;
  SCAN_TYPE_SECURITY = 2;
  SCAN_TYPE_COMPLIANCE = 3;
  SCAN_TYPE_PERFORMANCE = 4;
  SCAN_TYPE_INFRASTRUCTURE = 5;
  SCAN_TYPE_WEB_APPLICATION = 6;
  SCAN_TYPE_API = 7;
  SCAN_TYPE_NETWORK = 8;
  SCAN_TYPE_CODE_ANALYSIS = 9;
}

// 掃描狀態
enum ScanStatus {
  SCAN_STATUS_UNSPECIFIED = 0;
  SCAN_STATUS_PENDING = 1;
  SCAN_STATUS_RUNNING = 2;
  SCAN_STATUS_COMPLETED = 3;
  SCAN_STATUS_FAILED = 4;
  SCAN_STATUS_PAUSED = 5;
  SCAN_STATUS_CANCELLED = 6;
  SCAN_STATUS_TIMEOUT = 7;
}

// =============================================
// 插件相關枚舉
// =============================================

// 插件類型
enum PluginType {
  PLUGIN_TYPE_UNSPECIFIED = 0;
  PLUGIN_TYPE_SCANNER = 1;
  PLUGIN_TYPE_ANALYZER = 2;
  PLUGIN_TYPE_REPORTER = 3;
  PLUGIN_TYPE_EXPORTER = 4;
  PLUGIN_TYPE_PROCESSOR = 5;
  PLUGIN_TYPE_VALIDATOR = 6;
}

// 插件狀態
enum PluginStatus {
  PLUGIN_STATUS_UNSPECIFIED = 0;
  PLUGIN_STATUS_ACTIVE = 1;
  PLUGIN_STATUS_INACTIVE = 2;
  PLUGIN_STATUS_ERROR = 3;
  PLUGIN_STATUS_UPDATING = 4;
  PLUGIN_STATUS_DISABLED = 5;
}

// =============================================
// 異步任務相關枚舉
// =============================================

// 異步任務狀態
enum AsyncTaskStatus {
  ASYNC_TASK_STATUS_UNSPECIFIED = 0;
  ASYNC_TASK_STATUS_PENDING = 1;
  ASYNC_TASK_STATUS_RUNNING = 2;
  ASYNC_TASK_STATUS_COMPLETED = 3;
  ASYNC_TASK_STATUS_FAILED = 4;
  ASYNC_TASK_STATUS_CANCELLED = 5;
  ASYNC_TASK_STATUS_TIMEOUT = 6;
}

// 重試策略類型
enum RetryStrategy {
  RETRY_STRATEGY_UNSPECIFIED = 0;
  RETRY_STRATEGY_FIXED_DELAY = 1;
  RETRY_STRATEGY_EXPONENTIAL_BACKOFF = 2;
  RETRY_STRATEGY_LINEAR_BACKOFF = 3;
}